put a one in the post title

--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@ title: "mf://TODO Home"
   <iframe class="youtube" src="//www.youtube.com/embed/{{post.video}}?rel=0" frameborder="0" allowfullscreen></iframe>
   {{ post.excerpt }}
   <p>
-    <a href="{{post.url}}" class="more">More &raquo;</a>
+    <a href="{{post.url}}" class="more">Read more &raquo;</a>
   </p>
 {% endfor %}
