--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@ title: "mf://TODO Home"
   <iframe class="youtube" src="//www.youtube.com/embed/{{post.video}}?rel=0" frameborder="0" allowfullscreen></iframe>
   {{ post.excerpt }}
   <p>
-    <a href="{{post.url}}" class="more">Read more &raquo;</a>
+    <a href="{{post.url}}" class="more btn btn-primary">Read more &raquo;</a>
   </p>
 {% endfor %}
